--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,7 @@
-# PUERTO = 8080
-# MONGO_URL = mongodb+srv://coderhouse50015:coderhouse@cluster0.gbtlnu1.mongodb.net/desarrollo?retryWrites=true&w=majority&appName=Cluster0
+PORT=8080
+MONGO_URL=mongodb+srv://J4HY123:IjeIrbqq6qxjPKHQ@cluster0.efnweff.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=Cluster0
+SECRET_COOKIE=hola
+SECRET_SESSION=secretCoder
+SECRET_OR_KEY=coderhouse
+TOKEN=coderCookieToken
+NODE_ENV=production
