--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clase-2",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js --mode development",
