--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node src/app.js --mode production"
   },
   "engines": {
-    "node": "14.x"
+    "node": ">=16.0.0"
   },
   "keywords": [],
   "author": "",
